Updated Featured Services Section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-search icon"></i></div>
               <h4>Find a property</h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <p>From the comfort of your home, find the room, studio, apartment or house you want to rent and share the link with us!</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -115,7 +115,7 @@
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-person-check icon"></i></div>
               <h4>WeVisit for you</h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p>We will arrange a visit on your behalf and visit the property and meet the letting agency or the landlord ourselves.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -123,7 +123,7 @@
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-file-earmark-check icon"></i></div>
               <h4>Get our report</h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <p>We will take pictures and record videos of the surrounding areas, the outside of the property and the inside of it. We will pack everything back to you with our personal report about what we found while we visit the property.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -131,7 +131,7 @@
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-key icon"></i></div>
               <h4>Rent it</h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <p>If you really like the property, rent it! You will pay our <a href="index.html#pricing">fees</a> when you sign the contract.</p>
             </div>
           </div>
 
@@ -139,7 +139,7 @@
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-box-seam icon"></i></div>
               <h4>Move in</h4>
-              <p>At vero eos et accusamus et iusto odio dinissimos ducimus qui blanditiis</p>
+              <p>Get everything ready, you have a safe place to land in London now!</p>
             </div>
           </div>
 
