Updating Why Us section - WIP

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <ul>
           <li><a href="index.html"><span>Home</span></a></li>
           <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="index.html#why-us">Why Us</a></li>
           <li><a class="nav-link scrollto" href="index.html#pricing">Pricing</a></li>
           <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="index.html#faq">FAQ</a></li>
@@ -267,6 +268,115 @@
 
       </div>
     </section><!-- End Services Section -->
+
+    <!-- ======= Why Us Section ======= -->
+    <section id="why-us" class="about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-header">
+          <h2>Why Us</h2>  
+        </div>
+
+        <div class="row g-4 g-lg-5" data-aos="fade-up" data-aos-delay="200">
+
+          <div class="col-lg-5">
+            <div class="about-img">
+              <img src="assets/img/why-us-2.jpg" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-7">
+
+            <!-- Tabs -->
+            <ul class="nav nav-pills mb-3">
+              <li><a class="nav-link active" data-bs-toggle="pill" href="#tab1">Why WeVisit</a></li>
+              <li><a class="nav-link" data-bs-toggle="pill" href="#tab2">What do we solve</a></li>
+              <li><a class="nav-link" data-bs-toggle="pill" href="#tab3">How do we do it</a></li>
+            </ul><!-- End Tabs -->
+
+            <!-- Tab Content -->
+            <div class="tab-content">
+
+              <div class="tab-pane fade show active" id="tab1">
+
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>London renting market is very competitive, with good places having several visits a day and being rented out within their first week advertised.</a>
+                </div>
+                
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>It is very dangerous to pay in advance for a property you have not seen yourself and to people, you have not met personally. Avoid it!</a>
+                </div>
+
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>Going the safe route: Renting a hotel or Airbnb for a few weeks while you search for a long-term place to stay could be expensive…and not everyone has a relocation package!</a>
+                </div>
+
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>You might not know the UK regulations and laws so you could have a bad deal or be in an illegal position.</a>
+                </div>
+
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>WeVisit the properties for you while you are at home in your home country and we will meet the agency or the landlord on your behalf.</a>
+                </div>
+
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>WeVisit will send you back a report with pictures, videos and red flags (if any!) after the visit.</a>
+                </div>
+
+              </div><!-- End Tab 1 Content -->
+
+              <div class="tab-pane fade show" id="tab2">
+
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>The problem of renting a room or a flat from overseas without the possibility of visiting by yourself.</a>
+                </div>
+
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>We are a third party, so we will not get biased towards making you rent something you will not like.</a>
+                </div>
+
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>Reduce online scams.</a>
+                </div>
+
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>Save money for people having to rent a hotel or an Airbnb while visiting rooms, flats, or houses.</a>
+                </div>
+
+              </div><!-- End Tab 2 Content -->
+
+              <div class="tab-pane fade show" id="tab3">
+
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>You find the property you like, we arrange a visit and we take pictures and videos of the surrounding area, the property itself and we give you our honest feeling of how the property or room looks in reality.</a>
+                </div>
+
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>We could also include details such as how tidy, clean, noisy, and insulated it is.</a>
+                </div>
+
+              </div><!-- End Tab 3 Content -->
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End About Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
