Updating messages under pricing.

--- a/index.html
+++ b/index.html
@@ -335,6 +335,11 @@
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-dash"></i>
+                  <a>You might get ignored because you're not yet in the UK to visit it.</a>
+                </div>
+
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
                   <a>The problem of renting a room or a flat from overseas without the possibility of visiting by yourself.</a>
                 </div>
 
@@ -504,7 +509,7 @@
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="#" class="buy-btn">Recommended for the first time</a>
               </div>
 
             </div>
@@ -531,7 +536,7 @@
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="#" class="buy-btn">Great if you are not picky</a>
               </div>
 
             </div>
@@ -557,7 +562,7 @@
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">Buy Now</a>
+                <a href="#" class="buy-btn">For having the best experience</a>
               </div>
 
             </div>
