Updating messages under pricing.

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">Recommended for the first time</a>
+                <a href="#" class="buy-btn">First timer choice!</a>
               </div>
 
             </div>
