--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="text" name="arriveDate" class="form-control" id="arriveDate" placeholder="Date of arrival" required>
+                  <input type="text" name="phoneNumber" class="form-control" id="phoneNumber" placeholder="Phone number +44..." required>
                 </div>
               </div>
               <div class="form-group mt-3">
