Updating messages under pricing.

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">First timer choice!</a>
+                <a href="#" class="buy-btn">It is my first time!</a>
               </div>
 
             </div>
@@ -536,7 +536,7 @@
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">Great if you are not picky</a>
+                <a href="#" class="buy-btn">I am not too picky!</a>
               </div>
 
             </div>
@@ -562,7 +562,7 @@
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">For having the best experience</a>
+                <a href="#" class="buy-btn">I want the best experience!</a>
               </div>
 
             </div>
