--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-dash"></i>
-                  <a>Going the safe route: Renting a hotel or Airbnb for a few weeks while you search for a long-term place to stay could be expensive…and not everyone has a relocation package!</a>
+                  <a>Going the safe route: Renting a hotel or Airbnb for a few weeks while you search for a long-term place to stay could be expensive, and not everyone has a relocation package!</a>
                 </div>
 
                 <div class="d-flex align-items-center mt-4">
@@ -392,12 +392,6 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
                   Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
@@ -408,12 +402,6 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
                   Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
@@ -424,12 +412,6 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
                   Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
@@ -440,12 +422,6 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
                   Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
@@ -456,12 +432,6 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
                   Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
@@ -509,7 +479,7 @@
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">It is my first time!</a>
+                <a href="index.html#contact" class="buy-btn">It is my first time!</a>
               </div>
 
             </div>
@@ -536,7 +506,7 @@
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">I am not too picky!</a>
+                <a href="index.html#contact" class="buy-btn">I am not too picky!</a>
               </div>
 
             </div>
@@ -562,7 +532,7 @@
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="#" class="buy-btn">I want the best experience!</a>
+                <a href="index.html#contact" class="buy-btn">I want the best experience!</a>
               </div>
 
             </div>
@@ -585,9 +555,9 @@
 
         <div class="section-header">
           <h2>About Us</h2>
-          <p>We are locals that have been renting in London for over a decade in many different places, rooms shared accommodations, studios and entire properties from 1 to 4-bedroom houses. We know how difficult it is to find the right place.</p><br>
-          <p>The process could take weeks and the best places do not last long before they are rented out. If you are overseas and planning to move into London for work or to study, it is too risky to pay in advance for a room or a property without seeing yourself or without meeting with the agency or the landlord.</p><br>
-          <p>A safe option is to book a hotel or Airbnb for some time while visiting the different places, but that is expensive. We want to ease that stress and save you money: WeVisit for you.</p>
+          <p>We are locals that have been renting in London for over a decade in many different places, rooms shared accommodations, studios and entire properties from 1 to 4-bedroom houses.</p><br>
+          <p>We know how difficult it is to find the right place.</p><br>
+          <p>With us it does not have to be in that way</p>
         </div>
 
       </div>
@@ -745,7 +715,7 @@
                 </a>
                 <div>
                   <h4>Whatsapp:</h4>
-                  <p>+44 0 7752 000 000</p>
+                  <p>+44 7752 393 031</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -760,7 +730,7 @@
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="text" name="phoneNumber" class="form-control" id="phoneNumber" placeholder="Phone number +44..." required>
+                  <input type="text" name="phoneNumber" class="form-control" id="phoneNumber" placeholder="Phone number with country code" required>
                 </div>
               </div>
               <div class="form-group mt-3">
@@ -796,25 +766,12 @@
             <div class="footer-info">
               <h3>WeVisit</h3>
               <p>
-                London, UK<br><br>
-                <strong>Email:</strong> wevisituk@gmail.com<br>
-                <strong>Phone:</strong> +44 0 7752 000 000<br>
+                London, United Kingdom
               </p>
             </div>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links">
-            <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="index.html">Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="index.html#services">Services</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="index.html#pricing">Pricing</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="index.html#about">About</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="index.html#faq">FAQ</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="index.html#contact">Contact</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
