Added Why Us image

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
 
-      <a></a><!-- Maintain this tag to keep the menu centred -->
+      <a class="btn-getstarted scrollto" href="index.html">Get Started</a><!-- Maintain at least the a tag to keep the menu centred -->
 
     </div>
   </header><!-- End Header -->
@@ -281,7 +281,7 @@
 
           <div class="col-lg-5">
             <div class="about-img">
-              <img src="assets/img/why-us-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/why-us.jpg" class="img-fluid" alt="">
             </div>
           </div>
 
