Added icon in services section

--- a/index.html
+++ b/index.html
@@ -166,11 +166,9 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi-activity"></i>
+                  <i class="bi bi-house"></i>
                 </div>
-                <a href="#" class="stretched-link">
-                  <h3>Nesciunt Mete</h3>
-                </a>
+                <h3>Property visit</h3>
                 <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis.</p>
               </div>
             </div>
@@ -183,11 +181,9 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi-broadcast"></i>
+                  <i class="bi bi-camera-fill"></i>
                 </div>
-                <a href="#" class="stretched-link">
-                  <h3>Eosle Commodi</h3>
-                </a>
+                <h3>Videos and photos</h3>
                 <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
               </div>
             </div>
@@ -200,10 +196,10 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi-easel"></i>
+                  <i class="bi bi-file-richtext"></i>
                 </div>
-                <a href="#" class="stretched-link">
-                  <h3>Ledo Markt</h3>
+                <a class="stretched-link">
+                  <h3>Report</h3>
                 </a>
                 <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
               </div>
@@ -217,13 +213,13 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi-bounding-box-circles"></i>
+                  <i class="bi bi-question-lg"></i>
                 </div>
-                <a href="#" class="stretched-link">
-                  <h3>Asperiores Commodit</h3>
+                <a class="stretched-link">
+                  <h3>Questions to ask</h3>
                 </a>
                 <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
-                <a href="#" class="stretched-link"></a>
+                <a class="stretched-link"></a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -235,13 +231,13 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi-calendar4-week"></i>
+                  <i class="bi bi-people"></i>
                 </div>
-                <a href="#" class="stretched-link">
-                  <h3>Velit Doloremque</h3>
+                <a class="stretched-link">
+                  <h3>Advices</h3>
                 </a>
                 <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
-                <a href="#" class="stretched-link"></a>
+                <a class="stretched-link"></a>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -253,13 +249,13 @@
               </div>
               <div class="details position-relative">
                 <div class="icon">
-                  <i class="bi bi-chat-square-text"></i>
+                  <i class="bi bi-gem"></i>
                 </div>
-                <a href="#" class="stretched-link">
-                  <h3>Dolori Architecto</h3>
+                <a class="stretched-link">
+                  <h3>Premium accounts</h3>
                 </a>
                 <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
-                <a href="#" class="stretched-link"></a>
+                <a class="stretched-link"></a>
               </div>
             </div>
           </div><!-- End Service Item -->
