--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
 
-      <a class="btn-getstarted scrollto" href="index.html">Get Started</a><!-- Maintain at least the a tag to keep the menu centred -->
+      <!-- <a class="btn-getstarted scrollto" href="index.html">Get Started</a> -->
+      <div class="social-links order-first order-lg-last mb-3 mb-lg-0 row"> <!-- Div añadido para los iconos-->
+        <a href="https://www.facebook.com/wevisituk" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/wevisituk/" class="instagram"><i class="bi bi-instagram"></i></a>
+      </div>
 
     </div>
   </header><!-- End Header -->
