Moving icons to the top

--- a/index.html
+++ b/index.html
@@ -67,26 +67,22 @@
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
 
-      <!-- <a class="btn-getstarted scrollto" href="index.html">Get Started</a> -->
-      <div class="social-links order-first order-lg-last mb-3 mb-lg-0 row"> <!-- Div añadido para los iconos-->
-        <a href="https://www.facebook.com/wevisituk" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/wevisituk/" class="instagram"><i class="bi bi-instagram"></i></a>
+      <div>
+        <!-- Floating Button -->
+        <a href="https://api.whatsapp.com/send?phone=+447752393031&text=Hello, would you do a visit on my behalf?" class="floating-whatsapp" target="_blank">
+          <i class="fa-brands fa-whatsapp float-button"></i>
+        </a>
+        <a href="https://m.me/wevisituk" class="floating-fb" target="_blank">
+          <i class="fa-brands fa-facebook-messenger float-button"></i>
+        </a>
+        <a href="https://www.instagram.com/wevisituk/" class="floating-ig" target="_blank">
+          <i class="fa fa-instagram float-button"></i>
+        </a>
+        <!-- End of Floating Button -->
       </div>
 
     </div>
   </header><!-- End Header -->
-
-    <!-- Floating Button -->
-    <a href="https://api.whatsapp.com/send?phone=+447752393031&text=Hello, would you do a visit on my behalf?" class="floating-whatsapp" target="_blank">
-      <i class="fa-brands fa-whatsapp float-button"></i>
-    </a>
-    <a href="https://m.me/wevisituk" class="floating-fb" target="_blank">
-      <i class="fa-brands fa-facebook-messenger float-button"></i>
-    </a>
-    <a href="https://www.instagram.com/wevisituk/" class="floating-ig" target="_blank">
-      <i class="fa fa-instagram float-button"></i>
-    </a>
-    <!-- End of Floating Button -->
 
   <section id="hero-animated" class="hero-animated d-flex align-items-center">
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
