--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
           <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
           <li><a class="nav-link scrollto" href="index.html#why-us">Why Us</a></li>
           <li><a class="nav-link scrollto" href="index.html#pricing">Pricing</a></li>
-          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="index.html#faq">FAQ</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
@@ -113,7 +112,7 @@
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-person-check icon"></i></div>
               <h4>WeVisit for you</h4>
-              <p>We will arrange a visit on your behalf and visit the property and meet the letting agency or the landlord ourselves.</p>
+              <p>We will arrange a visit on your behalf, visit the property and meet the letting agency or the landlord ourselves.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -121,7 +120,7 @@
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-file-earmark-check icon"></i></div>
               <h4>Get our report</h4>
-              <p>We will take pictures and record videos of the surrounding areas, the outside of the property and the inside of it. We will pack everything back to you with our personal report about what we found while we visit the property.</p>
+              <p>We will take pictures and  videos of the surrounding area, the outside and the inside of the property. Then, we will report you back with our findings about the property.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -285,9 +284,10 @@
 
             <!-- Tabs -->
             <ul class="nav nav-pills mb-3">
-              <li><a class="nav-link active" data-bs-toggle="pill" href="#tab1">Why WeVisit</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#tab2">What do we solve</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#tab3">How do we do it</a></li>
+              <li><a class="nav-link active" data-bs-toggle="pill" href="#tab1">Why</a></li>
+              <li><a class="nav-link" data-bs-toggle="pill" href="#tab2">What</a></li>
+              <li><a class="nav-link" data-bs-toggle="pill" href="#tab3">How</a></li>
+              <li><a class="nav-link" data-bs-toggle="pill" href="#tab4">About</a></li>
             </ul><!-- End Tabs -->
 
             <!-- Tab Content -->
@@ -360,7 +360,7 @@
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-dash"></i>
-                  <a>You find the property you like, we arrange a visit and we take pictures and videos of the surrounding area, the property itself and we give you our honest feeling of how the property or room looks in reality.</a>
+                  <a>We will take pictures and  videos of the surrounding area and the outside and the inside of the property. Then, you will receive a report with them and with our findings.</a>
                 </div>
 
                 <div class="d-flex align-items-center mt-4">
@@ -370,6 +370,22 @@
 
               </div><!-- End Tab 3 Content -->
 
+              <div class="tab-pane fade show" id="tab4">
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>We are locals that have been renting in London for over a decade in many different places, rooms shared accommodations, studios and entire properties from 1 to 4-bedroom houses.</a>
+                </div>
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>We know how difficult it is to find the right place.</a>
+                </div>
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>With us it does not have to be in that way</a>
+                </div>
+
+              </div><!-- End Tab 4 Content -->
+
             </div>
 
           </div>
@@ -377,7 +393,7 @@
         </div>
 
       </div>
-    </section><!-- End About Section -->
+    </section><!-- End Why Us Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials">
@@ -390,7 +406,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  London can be a tough place to find somewhere to call home, we can make things easier and take the stress out of you.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -400,7 +416,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  There are not many cities more expensive than London for accommodation, staying in a hotel for weeks until you manage to find your room or property to move in could get really expensive. WeVisit for you, so you can save money and land directly on your new home.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -410,7 +426,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  Have you been shown a really nice room online, wonderful pictures and photos and asked for a deposit to secure it? Scams are on the rise, so be aware of who you trust!
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -420,7 +436,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  Are you worried about how you will fit in the city? Not sure about your new colleagues? Worried about your first year at Uni? Let us take the worry of renting a place to stay so you can focus on what is really important.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -430,7 +446,7 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  Most landlords and agencies do not bother to reply to you if you are not yet in London so, you will not be given the chance to rent a room or property. We are locals, WeVisit the properties ourselves, they will get back to you if you tell them someone will visit it on your behalf!
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -544,20 +560,6 @@
 
       </div>
     </section><!-- End Pricing Section -->
-
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-header">
-          <h2>About Us</h2>
-          <p>We are locals that have been renting in London for over a decade in many different places, rooms shared accommodations, studios and entire properties from 1 to 4-bedroom houses.</p><br>
-          <p>We know how difficult it is to find the right place.</p><br>
-          <p>With us it does not have to be in that way</p>
-        </div>
-
-      </div>
-    </section><!-- End About Section -->
 
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq">
